# esp-dev-kits

esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/components/esp32_s3_lcd_ev_board/: Kconfig  idf_component.yml
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/components/esp32_s3_lcd_ev_board/src/: bsp_lvgl_port.c
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_matter.cpp  app_matter_ctrl.cpp  app_matter_ctrl.h  linker.lf
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/main/panel_main/: panel_main.c  panel_main.h  settings.c
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/main/panel_main/icon/: light_off.c  light_on.c  plug_off.c  plug_on.c  switch_off.c  switch_on.c
esp32-s3-lcd-ev-board/examples/smart_panel_with_controller/main/panel_main/ui/: ui_about.c  ui_clock.c  ui_main.c  ui_main.h  ui_matter.c  ui_matter.h  ui_music.c  ui_setting.c  ui_status_bar.c  ui_switch.c
